# sn-libraries

./: .env.example  .gitignore  JK_ig.db  README.md  Tests-when-packages.code-workspace  check_packages.py  pyproject.toml  requirements.txt  run_ig_publisher.py  setup.py  tests.py  update_init.py  update_requirements.py
Graph API Libraries/: PostManager.py  Post_Manager.py  README  comments_manager.py  facebook_api_client.py  post_manager_tests.ipynb  test_to_delete_001.py  utils.py
apps/: JK_fb_test.py
config/: proxy_locations.json
config_files/: FB_JK_JK Travel_JK Travel_config.json  FB_LS_ES_ES_config.json  FB_LS_M001_DH_config.json
data/: JK_ig.db  ig_change_status.py  ig_db_verify_tables.py  ig_initialize_db.py  ig_print_db.py  update_gs_row_numbers.py
documentation/: google_api_authentication.md
fb-api/: fb_post_manager.py  fb_utils.py
notebooks/: ,gitignore  47548556576_following_46.json  DH_instagram_profiles.xlsx  JK_ig_posts.csv  JK_ig_session.pkl  JK_post_in_queue.xlsx  JK_posting_main_code TESTTRIAL.ipynb  JK_posting_main_code TESTTRIAL.py  JK_posting_main_code.py  JK_posts.xlsx  JK_relevant_ig_profiles.csv  JK_relevant_ig_profiles.json  JK_relevant_ig_profiles.xlsx  fb_create_json_config.py  fb_tests.ipynb  hikerAPI_temporary.py  ig_find_track.ipynb  ig_follow_tests.ipynb  ig_hapi_tests.ipynb  ig_location_tests.ipynb  ig_post_st_tests.ipynb  ig_publish_post_test.ipynb  ig_st_tests.ipynb  ig_tests.ipynb  instagram_profiles.csv  instagram_profiles.json  location_and_upload.ipynb  location_by_name.json  location_by_pk.json  my_instagram_posts.csv  tests.py  top_locations.json  ~$JK_posts.xlsx
sessions/: JK_session.json
sn-env/: pyvenv.cfg
sn-libraries/: pyvenv.cfg
sn_env/: pyvenv.cfg
sn_libraries.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
social_media_api_project.egg-info/: PKG-INFO  SOURCES.txt
src/: .gitignore  __init__.py  config_loader.py  error_handler.py  fb_api_client.py  fb_comment_manager.py  fb_create_json_config.py  fb_post_composer.py  fb_post_manager.py  fb_post_tracker.py  fb_publishing_orchestrator.py  fb_scraper.py  fb_utils.py  google_api_types.py  ig_auth.py  (+20 more)
(+107 files in other folders)
